--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,26 @@
 node_modules/
 bower_components/
+dist/
 tmp/
 .tmp/
 tmp_files/
+public/
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.env
+.env.js
 .DS_Store
-npm-debug.log
 .idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
 *.ai
 *.psd
 *.pdf
-
