--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# uncomment for production
+# .env.js
+
 node_modules/
 dist/
 public/
@@ -9,9 +12,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
-.env
-.env.js
+# Editor files
 .DS_Store
 .idea
 .vscode
