--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "imagesloaded": "^4.1.4",
-    "moment": "last",
+    "moment": "^2.21.0",
     "vue": "^2.5.13",
     "vue-material": "0.8.1",
     "vue-router": "^3.0.1",
