--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "postcss-loader": "^2.0.8",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.3",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
