--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "beauty-vuejs-boilerplate",
   "version": "1.0.0",
+  "private": true,
   "description": "A Vue.js project",
   "author": "Sasha Zmts <sa.zmts@gmail.com>",
-  "private": true,
   "scripts": {
     "serve": "NODE_ENV=development vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -14,15 +14,15 @@
     "fingerprintjs2": "^2.1.0",
     "moment": "^2.24.0",
     "qs": "^6.9.1",
-    "util": "^0.12.1",
+    "util": "^0.12.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5",
+    "vue-router": "^3.1.6",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.2",
-    "@vue/cli-plugin-eslint": "^4.1.2",
-    "@vue/cli-service": "^4.1.2",
+    "@vue/cli-plugin-babel": "~4.2.3",
+    "@vue/cli-plugin-eslint": "~4.2.3",
+    "@vue/cli-service": "~4.2.3",
     "@vue/eslint-config-standard": "^5.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
@@ -32,7 +32,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.1.2",
     "node-sass": "^4.13.1",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
