--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fingerprintjs2": "^2.1.0",
     "moment": "^2.24.0",
     "qs": "^6.9.1",
+    "ua-parser-js": "^0.7.21",
     "util": "^0.12.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
