--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "date-fns": "^2.12.0",
     "fingerprintjs2": "^2.1.0",
-    "moment": "^2.24.0",
-    "qs": "^6.9.1",
+    "qs": "^6.9.4",
     "ua-parser-js": "^0.7.21",
-    "util": "^0.12.2",
+    "util": "^0.12.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.2"
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.3",
