--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue/cli-service": "~4.2.3",
     "@vue/eslint-config-standard": "^5.1.0",
     "babel-eslint": "^10.0.3",
+    "@babel/compat-data": "7.9.0"
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-node": "^11.0.0",
